feat: xay dung module lo san pham
